syntax = "proto3";
package kompics.benchmarks;

import "messages.proto";

service BenchmarkRunner {
	rpc Ready (ReadyRequest) returns (ReadyResponse);
	rpc Shutdown (ShutdownRequest) returns (ShutdownAck);

	rpc AtomicBroadcast (AtomicBroadcastRequest) returns (TestResult);
}

message AtomicBroadcastRequest {
	string algorithm = 1;
	uint64 number_of_nodes = 2;
	uint64 duration_secs = 3;
	uint64 concurrent_proposals = 4;
	string reconfiguration = 5;
	string reconfig_policy = 6;
	string network_scenario = 7;
	uint64 election_timeout_ms = 8;
}
