syntax = "proto3";
package kompics.benchmarks;

message TestResult {
 	oneof sealed_value {
  		TestSuccess success = 1;
  		TestFailure failure = 2;
  		NotImplemented not_implemented = 3;
  	}
}

message TestSuccess {
  	uint32 number_of_runs = 1;
  	repeated double run_results = 2;
}
message TestFailure {
	string reason = 1;
}
message NotImplemented {
	// empty
}

message ReadyRequest {
	// empty
}

message ReadyResponse {
	bool status = 1;
}

message ShutdownRequest {
  bool force = 1;
}

message ShutdownAck {
  // empty
}
